--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 <body>
     <div id="searchContainer">
         <div id="searchText">Search</div>
-        <input type="text" id="knowledgeInput" placeholder="where knowledge begins" autofocus>
+        <input type="text" id="knowledgeInput" placeholder="Your wish is my command (use ↑↓ to navigate)" autofocus>
         <div id="buttonContainer"></div>
     </div>
     <button id="settingsButton">⚙️</button>
