--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,8 @@
         let selectedIndex = parseInt(localStorage.getItem('selectedIndex') || '0');
 
         function getSearchEngines() {
-            const defaultEngines = `ChatGPT:https://chatgpt.com/?q=%s
+            const defaultEngines = `Auto:https://search.actionschema.com/search?q=%s
+ChatGPT:https://chatgpt.com/?q=%s
 Exa:https://exa.ai/search?q=%s
 Perplexity:https://www.perplexity.ai/search?q=%s
 Google:https://www.google.com/search?q=%s`;
