--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@ Google:https://www.google.com/search?q=%s`;
 
         homepageButton.addEventListener('click', () => {
             currentUrlInput.value = window.location.href;
-            searchUrlInput.value = window.location.href + '?q=%s';
+            searchUrlInput.value = window.location.href + 'search?q=%s';
             homepageInstructions.style.display = 'block';
         });
 
