--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
             <li>Find the "Search engine" section</li>
             <li>Choose "Add search engine"</li>
             <li>Use this URL: <input type="text" id="searchUrl" readonly></li>
-            <li>Set a name (e.g., "Custom Search")</li>
+            <li>Set a name (e.g., "ActionSchema")</li>
             <li>Save and select as default</li>
         </ol>
         <button id="closeHomepageInstructions">Close</button>
